--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,6 +1,6 @@
 name: Tutorial Request
 description: Suggest a tutorial for MCreator for me to cover.
-labels: Tutorial Request
+labels: tutorial
 body:
  - type: textarea
    attributes:
